<resources>
    <string name="app_name">Easy Event</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Strings For Home -->
    <!-- Categories -->

    <string name="birthday">Birthday</string>
    <string name="Music_Party">Music Party</string>
    <string name="Wedding">Wedding</string>
    <string name="New_Year_Party">New Year Party</string>
    <string name="Workshop">Workshop</string>
    <string name="Casual_Gathering">Casual Event</string>

    <!-- Titles and Description -->
    <string name="Featured_Venues">All Featured Venues</string>
    <string name="Featured_Venues_Description">All the Venues that are mentioned are the most selected venues in Town</string>
    <string name="Most_Viewd">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="search_tex">View all</string>
    <string name="logo_name">Easy Event</string>
    <string name="search_text">Search</string>
    <string name="birthday_event">Birthday Event</string>
    <string name="expand_all">Expand all</string>


</resources>
