<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:orientation="vertical"
    android:background="@color/home_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:layout_centerVertical="true"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:src="@drawable/ic_baseline_menu_24" />

        <ImageView
            android:id="@+id/signOut"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/banner_background"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_login_24" />

    </RelativeLayout>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/dancing_script"
                    android:text="@string/logo_name"
                    android:textColor="@color/blackTextColor"
                    android:textSize="28sp" />

                <RelativeLayout
                    android:background="@color/white"
                    android:elevation="8dp"
                    android:layout_below="@id/app_name"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_width="wrap_content"
                        android:text="@string/search_text" />

                    <ImageView
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_height="30dp"
                        android:layout_marginRight="15dp"
                        android:layout_width="30dp"
                        android:src="@drawable/ic_baseline_search_24" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:background="@drawable/card1"
                        android:elevation="8dp"
                        android:layout_height="70dp"
                        android:layout_margin="10dp"
                        android:layout_width="60dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/birthday" />


                    </RelativeLayout>
                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/birthday"
                        android:textAlignment="center"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:background="@drawable/card2"
                        android:elevation="8dp"
                        android:layout_height="70dp"
                        android:layout_margin="10dp"
                        android:layout_width="60dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:src="@drawable/firecracker" />


                    </RelativeLayout>
                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/New_Year_Party"
                        android:textAlignment="center"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:background="@drawable/card4"
                        android:elevation="8dp"
                        android:layout_height="70dp"
                        android:layout_margin="10dp"
                        android:layout_width="60dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/wedding" />


                    </RelativeLayout>
                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/Wedding"
                        android:textAlignment="center"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:background="@drawable/card3"
                        android:elevation="8dp"
                        android:layout_height="70dp"
                        android:layout_margin="10dp"
                        android:layout_width="60dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:src="@drawable/workshop" />


                    </RelativeLayout>
                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/Workshop"
                        android:textAlignment="center"
                        />


                </LinearLayout>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/banner_background_light">

                <LinearLayout
                    android:id="@+id/featured_background"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:background="@color/banner_background"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Featured_Venues"
                        android:textSize="25sp"
                        android:textColor="@color/nude"
                        android:layout_marginTop="50dp"
                        android:textAllCaps="true"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/Featured_Venues_Description"/>





                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featuredVenueRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="-5dp"
                    android:layout_toRightOf="@id/featured_background"
                    android:background="@color/home_background"
                    android:orientation="horizontal"
                    tools:listitem="@layout/featured_cardview_design" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Most_Viewd"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:id="@+id/viewAl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>


                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mostViewedRecycleView"
                    android:layout_alignBottom="@+id/viewAl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/most_viewed" />





            </LinearLayout>


        </LinearLayout>



    </ScrollView>



</LinearLayout>